# dit

./: .dictator.env.example  .dit.env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.ps1  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
.red/memory/sessions/: current
src/: audio.rs  cmd_transcribe.rs  config.rs  doctor.rs  inject.rs  layout.rs  linux_input.rs  main.rs  models.rs  notify.rs  output.rs  service.rs  settings.rs  transcribe.rs  update.rs  wayland.rs
src/engine/: local.rs  mod.rs  scribe.rs
