[package]
name = "dit"
version = "0.1.0"
edition = "2021"
description = "Cross-platform push-to-toggle voice dictation via ElevenLabs Scribe v2 Realtime — speak, and the transcript is pasted into whatever app is focused."
authors = ["RedDB.io"]
license = "MIT"
repository = "https://github.com/reddb-io/dit"
readme = "README.md"
keywords = ["dictation", "speech-to-text", "elevenlabs", "voice", "accessibility"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "dit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
cpal = "0.15"
enigo = "0.2"
notify-rust = "4"
anyhow = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
global-hotkey = "0.8.0"

[profile.release]
opt-level = 3
lto = true
strip = true

# Linux: a pure-Rust D-Bus tray (no GTK/appindicator dependency).
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
ksni = "0.3.4"

# macOS/Windows: the GTK-free native tray needs the platform event loop.
[target.'cfg(not(target_os = "linux"))'.dependencies]
tao = "0.35.3"
tray-icon = "0.24.0"
