[package]
name = "dit"
version = "0.2.4"
edition = "2021"
description = "Cross-platform push-to-toggle voice dictation via ElevenLabs Scribe v2 Realtime — speak, and the transcript is pasted into whatever app is focused."
authors = ["RedDB.io"]
license = "MIT"
repository = "https://github.com/reddb-io/dit"
readme = "README.md"
keywords = ["dictation", "speech-to-text", "elevenlabs", "voice", "accessibility"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "dit"
path = "src/main.rs"

[features]
# Native settings window (eframe/egui). Enabled in release builds and CI.
# The headless dictation path works without this feature and needs only libasound.
gui = ["dep:eframe"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
cpal = "0.15"
notify-rust = "4"
anyhow = "1"
dirs = "5"
arboard = "3"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "isomp4", "flac", "wav", "pcm"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `dit update` self-upgrade: a blocking HTTPS client (rustls, no OpenSSL),
# SHA-256 verification, and atomic replacement of the running executable.
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
sha2 = "0.10"
self-replace = "1"
eframe = { version = "0.35", optional = true }

[profile.release]
opt-level = 3
lto = true
strip = true

# Linux: fully self-contained — pure-Rust input (evdev hotkey + /dev/uinput
# paste), clipboard (arboard) and a D-Bus tray (ksni, no GTK). No external apt
# packages beyond the universal libasound.
#
# arboard is intentionally pulled WITHOUT the `wayland-data-control` feature
# (issue #18, option A). That feature would give native Wayland clipboard
# access on wlroots compositors (sway/Hyprland/river/niri), but it pulls
# `wl-clipboard-rs` → a runtime `libwayland-client.so` dependency, eroding the
# "self-contained, only libasound2" Linux promise — and it does NOT help GNOME
# (Mutter exposes no `wlr-data-control`, so arboard falls back to X11 there
# anyway). We instead mitigate the Wayland image-paste race in code: a verified
# clipboard re-set with a longer settle (mitigation B) and an opt-in `--type`
# path that bypasses the clipboard for typeable text (mitigation C), both in
# src/linux_input.rs. Enabling option A is a deliberate footprint trade-off to
# be made explicitly, not silently.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
ksni = "0.3.4"

# macOS/Windows: native typing (enigo) + tray-icon on a tao event loop, with the
# global hotkey via global-hotkey.
[target.'cfg(not(target_os = "linux"))'.dependencies]
enigo = "0.2"
global-hotkey = "0.8.0"
tao = "0.35.3"
tray-icon = "0.24.0"
